tdf#159382: introduce a Word compat flag for hanging footnote number spacing

The new 'NoSpaceAfterHangingFootnoteNumbering' compatibility option is false
for ODF documents by default. Word file format filters set it to true. Its
purpose is to avoid extra spacing between the footnote number and its text,
when the paragraph has hanging first line, as in MS Word.

Change-Id: I42d9353865498137ab99e1d2c031f5b207cbc220
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162603
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162642
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>